# build-scripts

3/3scale-apisonator/: 3scale-apisonator_ubi_9.3.sh  build_info.json
3/3scale-operator/: 3scale-operator_ubi_9.3.sh
a/ansible-runner/: ansible-runner_ubi_9.3.sh  build_info.json
a/apache-arrow/: arrow_ubi_8.5.sh
a/apache-atlas/: apache-atlas_2.3.0_ubi_8.5.sh
a/apache-cxf/: cxf_ubi_9.3.sh
a/apache-kafka/: build_info.json
a/apache-nifi/: build_info.json
a/apache-tinkerpop/: apache-tinkerpop_ubi_9.3.sh
a/apache-tomcat/: apache-tomcat_ubi_9.3.sh  build_info.json
a/apollo-client/: apollo-client_ubi_8.7.sh  build_info.json
c/caniuse-lite/: build_info.json  caniuse-lite_ubi_9.3.sh
c/cassandra-driver/: build_info.json  cassandra-driver_ubi_9.3.sh
c/catboost/: build_info.json  catboost-1.2.5_ubi_9.3.sh
c/ci.gradle/: LICENSE
c/codsen/: build_info.json  codsen_ubi_9.3.sh
c/colorette/: build_info.json  colorette_ubi_9.3.sh
d/django/: build_info.json  django_ubi_9.3.sh
e/eclipse-collections/: eclipse-collections_ubi_9.3.sh
e/engine.io-parser/: engine.io-parser_ubi_8.7.sh
g/gitea/: build_info.json
g/glance/: build_info.json  glance_ubi_9.3.sh
g/grafana/: build_info.json  grafana_ubi_8.5.sh  grafana_ubi_8.7.sh
i/ijson/: ijson_ubi_9.3.sh
i/influxdb/: influxdb_ubi_9.3.sh
i/ipywidgets/: ipywidgets_ubi_8.7.sh
i/isexe/: build_info.json  (+1 more)
l/libprotobuf/: libprotobuf_ubi_9.3.sh  pyproject.toml
r/: rules_rust_0.26.0.patch
script/: validate_builds.py
templates/: python_pr_checklist.md
travis-currency-ymls/: currency-build.yml
(+111 files in other folders)
