[build-system]
requires = [
    "setuptools",
    "wheel",
    "auditwheel>=5.0.0",  # Needed for manylinux tag enforcement
]
build-backend = "setuptools.build_meta"

[project]
name = "libprotobuf"
version = "{PACKAGE_VERSION}"
description = "Provides protoc compiler and C++ files for protobuf"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "abseil_cpp==20240116.2",
]

[project.urls]
homepage = "https://github.com/protocolbuffers/protobuf"
upstream = "https://github.com/protocolbuffers/protobuf"

[tool.setuptools.packages.find]
namespaces = true
where = ["local"]

[tool.setuptools.package-data]
libprotobuf = ["bin/**/*", "lib64/**/*", "include/**/*"]

# ====== NEW: Force platform-specific wheel ======
[tool.distutils.bdist_wheel]
plat-name = "manylinux2014_ppc64le"  # Explicitly set the platform tag
universal = false  # Disable universal wheel (forces platform-specific build)
